--- a/themes/one/layouts/partials/header.html
+++ b/themes/one/layouts/partials/header.html
@@ -32,5 +32,27 @@
 	<!-- Navigation Pages -->
 	{{ range $i, $e:= $.Site.Params.navigation }}&nbsp;&nbsp;{{ with $.Site.GetPage "page" . }}<a href="{{ lower .Permalink }}" style="color:#777;"><strong>{{ title .Title }}</strong></a>{{ end }}{{ end }}
 	<!-- Show RSS feed in the header -->
-	<a href="{{ .Site.BaseURL }}index.xml" style="color:#777;float: right;"><strong><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-rss"><path d="M4 11a9 9 0 0 1 9 9"></path><path d="M4 4a16 16 0 0 1 16 16"></path><circle cx="5" cy="19" r="1"></circle></svg></strong></a>
+	<a href="{{ .Site.BaseURL }}index.xml" style="color:#777;float: right;">
+		<strong>
+			<svg
+				xmlns="http://www.w3.org/2000/svg"
+				width="16"
+				height="16"
+				viewBox="0 0 24 24"
+				fill="none"
+				stroke="currentColor"
+				stroke-width="2"
+				stroke-linecap="round"
+				stroke-linejoin="round"
+				class="feather feather-rss"
+			>
+				<path d="M4 11a9 9 0 0 1 9 9">
+				</path>
+				<path d="M4 4a16 16 0 0 1 16 16">
+				</path>
+				<circle cx="5" cy="19" r="1">
+				</circle>
+			</svg>
+		</strong>
+	</a>
 </header>
