--- a/themes/one/static/css/style.css
+++ b/themes/one/static/css/style.css
@@ -2,244 +2,252 @@
 @import url('https://fonts.googleapis.com/css?family=Alegreya+Sans+SC');
 
 body, li p {
-	font-family: 'Merriweather', serif;
-	line-height: 1.8;
+    font-family: 'Merriweather', serif;
+    line-height: 1.8;
 }
 
 h1,h2,h3,h4,h5,h6,header,header.a {
-	text-transform: lowercase;
-	font-family: 'Alegreya Sans SC', sans-serif;
+    text-transform: lowercase;
+    font-family: 'Alegreya Sans SC', sans-serif;
 }
 
 header,header.a{
-	font-weight: bold;
+    font-weight: bold;
 }
 
 @media all {
-	html {
-		font-size: 18px;
-	}
-	body > * {
-		font-size: 100%;
-		margin-left: 7.5rem;
-		margin-right: 7.5rem;
-	}
+    html {
+        font-size: 18px;
+    }
+    body > * {
+        font-size: 100%;
+        margin-left: 7.5rem;
+        margin-right: 7.5rem;
+    }
 }
 @media all and (max-width:840px){
-	html {
-		font-size: 17px;
-	}
-	body > * {
-		margin-left: 5.5rem;
-		margin-right: 5.5rem;
-	}
+    html {
+        font-size: 17px;
+    }
+    body > * {
+        margin-left: 5.5rem;
+        margin-right: 5.5rem;
+    }
+    pre code {
+        font-size: 12px;
+    }
 }
 @media all and (max-width:760px){
-	body > * {
-		margin-left: 2.5rem;
-		margin-right: 2.5rem;
-	}
+    body > * {
+        margin-left: 2.5rem;
+        margin-right: 2.5rem;
+    }
 }
 @media all and (max-width:580px){
-	html {
-		font-size: 16px;
-	}
-	body > * {
-		margin: 0.7rem 1.5rem 0 1.5rem;
-	}
+    html {
+        font-size: 16px;
+    }
+
+    body > * {
+        margin: 0.7rem 1.5rem 0 1.5rem;
+    }
 }
 
 /* reset */
 * {
-	margin: 0;
-	padding: 0;
+    margin: 0;
+    padding: 0;
 }
 
 html {
-	height: 100%;
+    height: 100%;
 }
 
 body {
-	padding: 0rem 0em 0rem 0em;
-	margin-left:auto;
-	margin-right:auto;
-	width:100%;
-	max-width:1200px;
-	min-height: 100%;
-	text-rendering: optimizeLegibility;
-	-moz-font-feature-settings: 'kern=1';
-	-moz-font-feature-settings: 'kern' 1;
-	-webkit-font-feature-settings: 'kern' 1;
-	-o-font-feature-settings: 'kern' 1;
-	-ms-font-feature-settings: 'kern' 1;
-	font-feature-settings: 'kern' 1;
+    padding: 0rem 0em 0rem 0em;
+    margin-left:auto;
+    margin-right:auto;
+    width:100%;
+    max-width:1200px;
+    min-height: 100%;
+    text-rendering: optimizeLegibility;
+    -moz-font-feature-settings: 'kern=1';
+    -moz-font-feature-settings: 'kern' 1;
+    -webkit-font-feature-settings: 'kern' 1;
+    -o-font-feature-settings: 'kern' 1;
+    -ms-font-feature-settings: 'kern' 1;
+    font-feature-settings: 'kern' 1;
 
-	text-rendering: optimizeLegibility;
-	-moz-font-feature-settings: 'liga=1';
-	-moz-font-feature-settings: 'liga' 1;
-	-webkit-font-feature-settings: 'liga' 1;
-	-o-font-feature-settings: 'liga' 1;
-	-ms-font-feature-settings: 'liga' 1;
-	font-feature-settings: 'liga' 1;
+    text-rendering: optimizeLegibility;
+    -moz-font-feature-settings: 'liga=1';
+    -moz-font-feature-settings: 'liga' 1;
+    -webkit-font-feature-settings: 'liga' 1;
+    -o-font-feature-settings: 'liga' 1;
+    -ms-font-feature-settings: 'liga' 1;
+    font-feature-settings: 'liga' 1;
 }
 
 div.content { 
-	display: block; 
-	padding: 1rem 0 1rem 0;
+    display: block; 
+    padding: 1rem 0 1rem 0;
 }
 
 header {
-	display:block;
-	padding: 0.5rem 0 0.5rem 0;
-	border-bottom: 0.10em solid black;
+    display:block;
+    padding: 0.5rem 0 0.5rem 0;
+    border-bottom: 0.10em solid black;
 }
 
 .title {
-	color:#777;
-	text-decoration: none;
+    color:#777;
+    text-decoration: none;
 }
 
 footer {
-	display:block;
-	padding: 0.5rem 0 5.5rem 0;
+    display:block;
+    padding: 0.5rem 0 5.5rem 0;
 }
 
 @media all and (max-width:520px) {
-	div.content { 
-		padding: 0;
-	}
+    div.content { 
+        padding: 0;
+    }
 }
 
 h1 {
-	display: block;
-	font-size: 250%;
-	line-height: 1.1;
-	margin-top: 1rem;
-	margin-bottom: 1.5rem;
-	padding-top: 0.02em;
-	-moz-hyphens: none;
-	-webkit-hyphens: none;
-	-o-hyphens: none;
-	-ms-hyphens: none;
-	hyphens: none;
+    display: block;
+    font-size: 250%;
+    line-height: 1.1;
+    margin-top: 1rem;
+    margin-bottom: 1.5rem;
+    padding-top: 0.02em;
+    -moz-hyphens: none;
+    -webkit-hyphens: none;
+    -o-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
 }
 
 h2 {
-	margin-top:	1.7rem;
-	font-size: 170%;
+    margin-top: 1.7rem;
+    font-size: 170%;
 }
 
 aside {
-	font-size: 0.84rem;
-	line-height: 1.40;
-	color: #667;
+    font-size: 0.84rem;
+    line-height: 1.40;
+    color: #667;
 }
 
 aside em {
-	font-size: 0.7rem;
+    font-size: 0.7rem;
 }
 
 
 p {
-	margin-bottom: 1em;
+    margin-bottom: 1em;
 }
 
 ul,ol {
-	margin-bottom: 1em;
-	padding-left: 1em;
+    margin-bottom: 1em;
+    padding-left: 1em;
 }
 
 li {
-	line-height: 1.75em;
-	margin-left: 0.75em;
-	list-style-type: none;
+    line-height: 1.75em;
+    margin-left: 0.75em;
 }
 
 
 table { 
-	margin-bottom: 1.5em;
-	border-collapse: collapse;
-	width: 95%;
+    margin-bottom: 1.5em;
+    border-collapse: collapse;
+    width: 95%;
 }
 
 table tr + tr {
-	border-top: 1px solid #ccc;
+    border-top: 1px solid #ccc;
 }
 table td + td {
-	border-left: 1px solid #ccc;
+    border-left: 1px solid #ccc;
 }
 
 table td {
-	padding: 0.4em;
-	text-align: center;
-	-moz-hyphens: none;
-	-webkit-hyphens: none;
-	-o-hyphens: none;
-	-ms-hyphens: none;
-	hyphens: none;
+    padding: 0.4em;
+    text-align: center;
+    -moz-hyphens: none;
+    -webkit-hyphens: none;
+    -o-hyphens: none;
+    -ms-hyphens: none;
+    hyphens: none;
 }
 
 table th {
-	font-weight: normal;
-	text-transform: uppercase;
-	font-size: 95%;
-	padding: 0.3rem 0.5rem 0.3rem 0.5rem;
-	line-height: 1.05;
+    font-weight: normal;
+    text-transform: uppercase;
+    font-size: 95%;
+    padding: 0.3rem 0.5rem 0.3rem 0.5rem;
+    line-height: 1.05;
 }
 
 img {
-	width: 100%;
+    width: 100%;
 }
 
 a {
-	color: #0366d6;
-	text-decoration: underline;
+    color: #0366d6;
+    text-decoration: underline;
 
 }
 
 
 div.nav a:active div { 
-	background: #cacaca;
+    background: #cacaca;
 }
 
 a:active { 
-	color: #777; 
+    color: #777; 
 }
 
 a:hover {
-	background: #F3F4F4;
+    background: #F3F4F4;
 
 }
 
 pre {
-	padding: 5px;
-	margin-bottom: 20px;
+    font-family: monospace, monospace;
+    padding: 15px;
+    margin-bottom: 20px;
+    overflow: auto;
+    line-height: 1.5;
 }
 
 code {
-	word-wrap: break-word;
-	font-size: 14px;
+    font-size: 14px;
+    display: inline-block;
+    max-width: 100%;
+    font-variant-ligatures: none;
 }
 
 figcaption {
-	font-weight: 400;
-	font-style: italic;
-	font-size: 0.7em/1.52;
-	line-height: 1.3;
-	color: #666665;
-	outline: 0;
-	z-index: 300;
-	text-align: center;
+    font-weight: 400;
+    font-style: italic;
+    font-size: 0.7em/1.52;
+    line-height: 1.3;
+    color: #666665;
+    outline: 0;
+    z-index: 300;
+    text-align: center;
 }
 
 blockquote {
-	border-left: 3.5px solid #0594cb;
-	margin: 0.7em 10px;
-	padding: 0.7em 20px;
+    border-left: 3.5px solid #0594cb;
+    margin: 0.7em 10px;
+    padding: 0.7em 20px;
 
 }
 
 blockquote p {
-	display: inline;
+    display: inline;
 }
 
