--- a/themes/one/layouts/partials/middle.html
+++ b/themes/one/layouts/partials/middle.html
@@ -2,8 +2,8 @@
 
 
 <div class="content">
-    <h1>{{ title .Data.Term  }} posts</h1>
-    {{ range first 8 .Pages }}
+    <h1>{{ title .Data.Term  }} Posts</h1>
+    {{ range .Pages }}
     {{ if eq .Type "posts"}}
         <p>
         <aside>{{ .Date.Format "January 2, 2006"}}</aside>
