--- a/themes/one/static/css/style.css
+++ b/themes/one/static/css/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Merriweather|Montserrat|IBM+Plex+Mono');
+@import url('https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Source+Code+Pro');
 
 body, li p {
     font-family: 'Merriweather', serif;
@@ -14,12 +14,17 @@ h3 {
 }
 
 header {
-    font-family: 'IBM Plex Mono';
+    font-family: 'Source Code Pro';
     text-transform: uppercase;
     font-size: 16px;
     letter-spacing: 0.05em;
+    line-height: 1.2;
     display: flex;
     justify-content: space-between;
+}
+
+header .title {
+    line-height: 1.8;
 }
 
 header, header a {
@@ -108,6 +113,18 @@ body {
 div.content { 
     display: block; 
     padding: 1rem 0 1rem 0;
+}
+
+.spon {
+    width: 100%;
+    font-family: 'Montserrat', sans-serif;
+    font-size: 14px;
+    background-color: rgb(243, 243, 165);
+    border-left: 3px solid black;
+    margin-bottom: 15px;
+    padding-bottom: 5px;
+    padding-left: 12px;
+    padding-top: 5px;
 }
 
 .attribution {
@@ -247,7 +264,6 @@ a:hover {
 }
 
 pre {
-    font-family: monospace, monospace;
     margin-left: 0.7em;
     padding-left: 1.4em;
     padding-right: 15px;
@@ -261,14 +277,22 @@ pre {
 }
 
 code {
+    font-family: 'Source Code Pro', monospace;
     display: inline-block;
     max-width: 100%;
     font-variant-ligatures: none;
+    text-rendering: auto;
+    -moz-font-feature-settings: 'liga=0';
+    -moz-font-feature-settings: 'liga' 0;
+    -webkit-font-feature-settings: 'liga' 0;
+    -o-font-feature-settings: 'liga' 0;
+    -ms-font-feature-settings: 'liga' 0;
+    font-feature-settings: 'liga' 0;
 }
 
 h1>code, h2>code, h3>code, h4>code, p>code {
-    font-size: smaller;
     text-transform: none;
+    color: #434f54;
 }
 
 figcaption {
